Getting out of sculpt mode does not update (derived) mesh normals anymore #46899

Closed
opened 2015-11-30 15:40:39 +01:00 by 0rAngE · 9 comments

System Information
Win 7 Ult 64
GeForce GTX 580

Blender Version
Broken: Buildbots Last ~48 hrs
3780158-win64
a149a67-win64
Worked: Before 2-3 days

Short description of error
When going to Sculpt Mode and doing sculpting, after exiting SculptMode and returning to ObjectMode the mesh seems as it did not take any sculpting.
After saving and reopening the file, it looks OK.
After further testing on a default scene with a scene I think the culprit is that some AutoSmoothing gets applied to the mesh. If i go to Properties > ObjextData >check then uncheck again AutoSmooth it get's fixed.
This has to be repeated after each time you go into SculptMode and exit.

Exact steps for others to reproduce the error

  • Create a Cube
  • Add Subsurf 4 Levels
  • Apply Subsurf / Convert To Mesh
  • Enter SculptMode > Change to Crease Brush with strong strngth > Apply some strokes
  • Exit SculptMode
    ... The mesh looks weird. Enter SculptMode - it looks fine
  • Go to Properties > ObjextData >check then uncheck again AutoSmooth it get's fixed.
  • This happens every time entering ScilptMode and making strokes.
**System Information** Win 7 Ult 64 GeForce GTX 580 **Blender Version** Broken: Buildbots Last ~48 hrs 3780158-win64 a149a67-win64 Worked: Before 2-3 days **Short description of error** When going to Sculpt Mode and doing sculpting, after exiting SculptMode and returning to ObjectMode the mesh seems as it did not take any sculpting. After saving and reopening the file, it looks OK. After further testing on a default scene with a scene I think the culprit is that some AutoSmoothing gets applied to the mesh. If i go to Properties > ObjextData >check then uncheck again AutoSmooth it get's fixed. This has to be repeated after each time you go into SculptMode and exit. **Exact steps for others to reproduce the error** - Create a Cube - Add Subsurf 4 Levels - Apply Subsurf / Convert To Mesh - Enter SculptMode > Change to Crease Brush with strong strngth > Apply some strokes - Exit SculptMode ... The mesh looks weird. Enter SculptMode - it looks fine - Go to Properties > ObjextData >check then uncheck again AutoSmooth it get's fixed. - This happens every time entering ScilptMode and making strokes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @0rAngE

Added subscriber: @0rAngE
Author

I haven't been sculpting as of late so I didn't notice it earlier.
Just checked going back to older versions of Blender off buildbot, and this is present in older versions as well.
tracked it back at least to: 1cfe274-win64

I haven't been sculpting as of late so I didn't notice it earlier. Just checked going back to older versions of Blender off buildbot, and this is present in older versions as well. tracked it back at least to: 1cfe274-win64
Bastien Montagne self-assigned this 2015-12-01 10:02:26 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This has nothing to do with auto-smooth, it’s just mesh normals not being updated when leaving sculpt mode…

This has nothing to do with auto-smooth, it’s just mesh normals not being updated when leaving sculpt mode…
Bastien Montagne removed their assignment 2015-12-02 20:55:51 +01:00
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-12-02 20:55:51 +01:00

Added subscribers: @Psy-Fi, @mont29

Added subscribers: @Psy-Fi, @mont29

Bug caused by 4d33c37c9e. @Psy-Fi I’ll let you decide how’s best way to fix this issue. ;)

Bug caused by 4d33c37c9e. @Psy-Fi I’ll let you decide how’s best way to fix this issue. ;)
Bastien Montagne changed title from Sculpting Applies wierd AutoSmooth Shading on ObjectData to Getting out of sculpt mode does not update (derived) mesh normals anymore 2015-12-02 22:20:12 +01:00

This issue was referenced by a491277f5d

This issue was referenced by a491277f5d93875255e26abea1ad752912c04ddf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46899
No description provided.