Fix T46899 sculpt normals not getting updated after exiting sculpt mode.

Habit is a bad thing: Update polys, not tessfaces.